dsh (0.0.18) unstable; urgency=low

  * New version. (not released)

 -- Junichi Uekawa <dancer@debian.org>  Fri, 28 Dec 2001 01:28:14 +0900

dsh (0.0.17) unstable; urgency=low

  * "A Package for your Christmas, my dear Emperor..." release
  * dsh.1, parameter.c: adding support for specifying arbitrary machine list
    specifications. the command-line "-f", or "--file"
  * dsh.1: updated, with redundant tags removed.
  * dsh.1, parameter.c: updated with a patch from Petter Reinholdtsen to
    support netgroups in dsh group specification. (closes: 126153)
  * Created file AUTHORS to give credits on who the code was written.
  * Marking the upstream homepage and address on README.Debian
  * Changed function indentation style to suit my new favor.
  * Added top-level README documentation, which suggests reading of
    debian/README.Debian
  * debian/postinst: fixed string comparison, it used to say "==", but it
    should have been "="
  * debian/rules: changed the method to obtain the version string for
    dshversion.h.

 -- Junichi Uekawa <dancer@debian.org>  Sun, 23 Dec 2001 14:32:21 +0900

dsh (0.0.16) unstable; urgency=low

  * Removing /etc/dsh{,/group} on purge. Thanks phil (closes: #113737)

 -- Junichi Uekawa <dancer@debian.org>  Sun, 30 Sep 2001 23:38:43 +0900

dsh (0.0.15) unstable; urgency=low

  * The configuration parser gives a warning when dsh.conf is not
    parsable, thanks to neil. (closes: #111413)
  * Please note that since dsh-0.0.14, configuration file format has
    changed slightly.

 -- Junichi Uekawa <dancer@debian.org>  Sat,  8 Sep 2001 04:51:12 +0900

dsh (0.0.14) unstable; urgency=low

  * Configuration file handling is slightly better - now handles spaces in config files :P (planning to make it into guile or something). Handles waitshell, and showmachinenames, and verbose. Changed dsh.conf to reflect this.
  * changed the method of obtaining DSH_VERSION to use dpkg-parsechangelog
