@@ -8,7 +8,7 @@ Upstream Author(s):
 
 Copyright:
 
-Copyright 2001 Junichi Uekawa
+Copyright (c) 2001, 2002 Junichi Uekawa
 
 Licensed under GPL version 2 or later.
 Please see /usr/share/common-licenses/GPL on Debian systems.
