@@ -1,8 +1,10 @@
 dsh (0.0.18) unstable; urgency=low
 
   * New version. (not released)
+  * updated README.Debian
+  * updated copyright for year 2002.
 
- -- Junichi Uekawa <dancer@debian.org>  Fri, 28 Dec 2001 01:28:14 +0900
+ -- Junichi Uekawa <dancer@debian.org>  Fri,  4 Jan 2002 21:10:54 +0900
 
 dsh (0.0.17) unstable; urgency=low
 
